Rydd opp, css, spacing, bug i annen pengestøtte seksjon

--- a/app/index.css
+++ b/app/index.css
@@ -18,26 +18,19 @@
   margin-bottom: var(--ax-space-32);
 }
 
+.seksjon-navigering {
+  margin-top: var(--ax-space-64);
+}
+
 .innhold {
   max-width: var(--innhold-max-width);
   margin: 0 auto var(--ax-space-80);
 }
 
-.preprod {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.left-border {
-  border-left: 4px solid var(--ax-brand-blue-700);
-  padding-left: var(--ax-space-16);
-}
-
-.expansion-card--pdf {
-  background-color: var(--ax-meta-purple-200);
-  border: none;
+.forklarende-tekst p,
+.forklarende-tekst h2,
+.forklarende-tekst h3 {
+  margin: var(--ax-space-16) 0;
 }
 
 .text-center {
